# reveal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
config/: settings.py
docs/: current-system-map.md  interaction-workbench-refactor.md  target-system-design.md
scripts/: deploy-self-host.sh  docker-update.sh  longbridge_oauth_local.py
server/: briefing.py  commands.py  main.py  mcp.py  scheduler.py  web.py
server/alerts/: __init__.py  engine.py  market_movers.py  news_alert.py  price_alert.py  regulatory.py  volume_alert.py
server/bot/: base.py  bindings.py  feishu.py  feishu_markdown.py  telegram.py
server/capabilities/: __init__.py  alerts.py  journal.py  market.py  market_skills.py  planner.py  reddit.py  registry.py  system.py  (+1 more)
tests/: test_alert_delivery.py  test_alert_engine.py  test_bot_cards.py  test_briefing.py  test_capabilities.py  test_claude_sdk_runtime.py  test_db_engine.py  test_event_feed.py  test_event_types.py  test_feishu_event.py  test_interaction_threading.py  test_job_runs.py  test_market_movers.py  test_portfolio_marker.py  test_reddit_monitor.py  test_regulatory_alerts.py  test_research_progress.py  test_research_prompts.py  test_research_search.py  test_research_service.py  test_scheduled_tasks.py  test_sdk_mcp.py  test_settings_and_router.py  test_social_digest.py  test_stock_data.py  test_stock_watchlist.py  test_system_catalog.py  test_twitter_cache.py  test_twitter_capabilities.py  test_twitter_monitor.py  test_web_api.py
(+56 files in other folders)
